--- a/infra/team_league_workflow/resource/workflow/team_league_elt_gcs_file_schema.yaml
+++ b/infra/team_league_workflow/resource/workflow/team_league_elt_gcs_file_schema.yaml
@@ -28,47 +28,7 @@ main:
           projectId: ${project_id}
           body:
             useLegacySql: false
-            query: INSERT INTO `mazlum_test.team_stat`
-              (
-              teamName,
-              teamScore,
-              teamSlogan,
-              teamTotalGoals,
-              topScorerStats,
-              bestPasserStats,
-              ingestionDate
-              )
-              SELECT
-              team_stats.teamName,
-              team_stats.teamScore,
-              team_slogan.teamSlogan,
-              sum(scorer.goals) as teamTotalGoals,
-              ARRAY_AGG(
-              STRUCT(
-              scorer.scorerFirstName AS firstName,
-              scorer.scorerLastName AS lastName,
-              scorer.goals AS goals,
-              scorer.games AS games
-              )
-              ORDER BY scorer.goals DESC LIMIT 1
-              )[OFFSET(0)] AS topScorerStats,
-              ARRAY_AGG(
-              STRUCT(
-              scorer.scorerFirstName AS firstName,
-              scorer.scorerLastName AS lastName,
-              scorer.goalAssists AS goalAssists,
-              scorer.games AS games
-              )
-              ORDER BY scorer.goalAssists DESC LIMIT 1
-              )[OFFSET(0)] AS bestPasserStats,
-              current_timestamp() as ingestionDate
-              FROM `mazlum_test.team_stat_raw` team_stats
-              INNER JOIN `mazlum_test.team_slogan` team_slogan ON team_stats.teamName = team_slogan.teamName,
-              UNNEST(team_stats.scorers) AS scorer
-              GROUP BY
-              team_stats.teamName,
-              team_stats.teamScore,
-              team_slogan.teamSlogan
+            query: "{{sql_query}}"
         result: queryResult
     - copyProcessedFilesToColdBucket:
         call: googleapis.cloudbuild.v1.projects.builds.create
